--- a/src/Branding/BrandingPage.css
+++ b/src/Branding/BrandingPage.css
@@ -118,3 +118,25 @@ body{
     font-size: 40px;
     border: 2px solid black;
 }
+
+@media (max-width: 950px){
+    .heading{
+        text-align: center;
+        font-size: 40px;
+    }
+
+    .projects-container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .project{
+        width: 70vw;
+        height: 95%;
+        margin-bottom: 10px;
+        outline: 1px solid black;
+        box-shadow: 0px 0px;
+        transition: box-shadow 300ms;
+    }
+}
