--- a/src/PosterExploration/PosterPage.css
+++ b/src/PosterExploration/PosterPage.css
@@ -1,6 +1,3 @@
-/* bg-color: #F1EEED */
-/* orange: #FF5C00 */
-
 .heading{
     font-size: 75px;
     font-weight: 600;
@@ -24,7 +21,6 @@
 
 .posters{
     display: flex;
-    /* justify-content: space-evenly; */
     align-items: center;
     flex-direction: column;
     
@@ -83,7 +79,6 @@
     letter-spacing: -2px;
     font-size: 36px;
 
-    /* Add transition for background-color, font-size, and border */
     transition: background-color 200ms ease-in-out, font-size 200ms ease-in-out, border 200ms ease-in-out;
 }
 
@@ -131,3 +126,24 @@
     background-color: #F1EEED;
 }
 
+@media (max-width: 950px){
+    .heading{
+        text-align: center;
+        font-size: 40px;
+    }
+
+    .poster-columns{
+        display: none;
+    }
+
+    .mobile-poster-column{
+        
+    }
+
+    .mobile-column{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 15px;
+    }
+}
